@@ -8,14 +8,13 @@
 /**
  *
  */
-function wfSpecialBlockme()
-{
-	global $wgBlockOpenProxies, $wgOut, $wgProxyKey;
+function wfSpecialBlockme() {
+	global $wgRequest, $wgBlockOpenProxies, $wgOut, $wgProxyKey;
 
 	$ip = wfGetIP();
-
-	if ( !$wgBlockOpenProxies || $_REQUEST['ip'] != md5( $ip . $wgProxyKey ) ) {
-		$wgOut->addWikiText( wfMsg( "disabled" ) );
+	
+	if( !$wgBlockOpenProxies || $wgRequest->getText( 'ip' ) != md5( $ip . $wgProxyKey ) ) {
+		$wgOut->addWikiText( wfMsg( 'disabled' ) );
 		return;
 	}
 
